# cmania

./: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  GB2UTF8.ps1  LICENSE  Mania.Console.Cxx.sln  README.en.md  README.md  package.ps1  setup.sh
.github/workflows/: codeql.yml  msbuild.yml
Logo/: Cmania-Logo.ai
cmania/: .clang-format  AboutScreen.cpp  AboutScreen.h  Animator.h  AsyncConsole.ixx  AudioManager.h  AudioService.ixx  BackgroundComponent.h  BassAudioManager.cpp  BassAudioManager.h  Beatmap.h  BeatmapDownloadingService.cpp  BeatmapDownloadingService.h  BeatmapManagementService.cpp  BeatmapManagementService.h  BeatmapManagementService.ixx  Binary.cpp  Binary.h  BufferController.cpp  BufferController.h  BufferController.ixx  CatchRuleset.cpp  CatchRuleset.h  ConsoleInput.h  ConsoleInputHandler.h  ConsoleText.cpp  ConsoleText.h  ConsoleText.ixx  Crc.cpp  Crc.h  Debug.cpp  Debug.h  Defines.h  DifficultyCalculator  DifficultyCalculator.cpp  DifficultyCalculator.h  DifficultyCalculator.ixx  EnumFlag.h  File.cpp  File.h  (+119 more)
cmania/Samples/: README
enc_temp_folder/676488ce4f5ef7c6fa73c32199f122d/: SongSelectScreen.cpp
enc_temp_folder/78c8182cc858f2baab34afd0aac12b37/: SongSelectScreen.cpp
enc_temp_folder/dbbeedb0e4d31588b3a4b4a1bf414569/: SongSelectScreen.cpp
enc_temp_folder/eb9c81284a2478ac450f41a12f24e78/: SongSelectScreen.cpp
